--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8099
 app.id=test22
 app.name=testtestname
+# spring\u9ED8\u8BA4\u4F7F\u7528logback\u914D\u7F6E\u65E5\u5FD7\u7EA7\u522B
+#logging.level.root=debug
