--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 ### set log levels ###
-log4j.rootLogger = debug,stdout,D,E  
+log4j.rootLogger = info,stdout,D,E  
 
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender  
 log4j.appender.stdout.Target = System.out  
